<resources>
    <string name="app_name">BattleShips</string>

    <string name="board_hits_title">frappes</string>
    <string name="board_ships_title">navires</string>
    <string name="board_ship_sunk_format" formatted="false">%s coulé</string>
    <string name="board_ship_hit_format" formatted="false">"%s : frappe en %c%d\n%s"</string>


    <string name="leaderboard">Leaderboard</string>
    <string name="battleship_welcome" formatted="false">Veuillez placer %d navire%s.</string>
    <string name="north">Nord</string>
    <string name="south">Sud</string>
    <string name="east">Est</string>
    <string name="west">Ouest</string>
    <string name="title_activity_player_name">PlayerNameActivity</string>
    <string name="enter_name_label">Entrez votre nom</string>
    <string name="enter_name_hint">Entrez votre nom</string>
    <string name="button_enter_name">Jouer!</string>
    <string name="put_ship_error">Impossible de placer le navire ici</string>
    <string name="insert_name_error">Veuillez insérer votre nom</string>
    <string name="win">Gagné</string>
    <string name="lose">Perdu</string>
    <string name="menu_change_name">Changer le nom</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="hint_new_user_name">Nouveau nom d\'utilisateur:</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="info_username_changed">Nom d\'utilisateur est changé</string>
    <string name="leaderboard_name">Nom</string>
    <string name="leaderboard_games_win">Jeus gagnés</string>
    <string name="leaderboard_games_done">Jeus jeués</string>

    <string name="start_over">Rejouer</string>
    <string name="back">Retour</string>
    <string name="field_under_fire">Cette case a déjà été touchée</string>
    <string name="restart_placement_button">Reset</string>
    <string name="ships_left_error">Il reste encore des navires à placer</string>
    <string name="no_ship_left_error">Il ne reste plus de navire</string>
    <string name="finish_placement_button">Jouer!</string>
    <string name="return_to_score">Score</string>

</resources>
