<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.excilys.formation.battleships.android.ui.PutShipsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/appbar"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:layout_alignParentTop="true"
                android:id="@+id/putships_fragment_container" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_below="@+id/putships_fragment_container">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/putship_instruction"
                    android:text="@string/battleship_welcome"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <RadioGroup
                        android:id="@+id/putship_radios_orientation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:text="@string/north"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_north" />

                        <RadioButton
                            android:text="@string/south"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_south" />

                        <RadioButton
                            android:text="@string/east"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_east" />

                        <RadioButton
                            android:text="@string/west"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_west" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
